fix: resolve issues based on comments

--- a/Project #1 - Static Website/contact.html
+++ b/Project #1 - Static Website/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>BB SaRu - Contact Us</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -21,11 +21,11 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md navbar-dark">
-      <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Logo of BB SaRu">
+    <nav class="navbar navbar-expand-md navbar-dark fontFamChewy">
+      <a class="navbar-brand fontFamChewy" href="index.html"><img src="assets/images/logo.png" alt="Logo of BB SaRu">
         <div class="store_name">
           <h1>BB SaRu</h1>
-          <p>BENTO BOX BY SAM AND RUE</p>
+          <p class="fontFamLeague">BENTO BOX BY SAM AND RUE</p>
         </div>
       </a>
 
@@ -92,43 +92,43 @@
           alt="">
       </div>
     </section>
-    <div class="invisible"></div>
+    <!-- <div class="invisible"></div> -->
   </main>
+  <footer>
+    <div class="copyright col-12 col-lg-5">
+      <img src="assets/images/logo.png" alt="BB Saru Logo">
+      <div>
+        <h1>BB SaRu</h1>
+        <p>&copy; 2021 Bento Box by Sam and Rue. All Rights Reserved.</p>
+      </div>
+    </div>
+  
+    <div class="quick_links col-12 col-md-6 col-lg-3">
+      <h3>QUICK LINKS</h3>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="order_page.html">Order Now</a>
+      <a href="contact.html">Contact Us</a>
+    </div>
+  
+    <div class="contact col-12 col-md-6 col-lg-3">
+      <h3>CONTACT</h3>
+      <div>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope"
+          viewBox="0 0 16 16">
+          <path
+            d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z" />
+        </svg>
+        <a href="mailto:contact@bbsaru.com">contact@bbsaru.com</a>
+      </div>
+    </div>
+  
+    <div class="attribute">
+      Icons taken from <a href="https://www.flaticon.com/" title="Flaticon" target="blank">www.flaticon.com</a>
+    </div>
+  </footer>
 </body>
 
-<footer>
-  <div class="copyright col-12 col-lg-5">
-    <img src="assets/images/logo.png" alt="BB Saru Logo">
-    <div>
-      <h1>BB SaRu</h1>
-      <p>&copy; 2021 Bento Box by Sam and Rue. All Rights Reserved.</p>
-    </div>
-  </div>
 
-  <div class="quick_links col-12 col-md-6 col-lg-3">
-    <h3>QUICK LINKS</h3>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="order_page.html">Order Now</a>
-    <a href="contact.html">Contact Us</a>
-  </div>
-
-  <div class="contact col-12 col-md-6 col-lg-3">
-    <h3>CONTACT</h3>
-    <div>
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope"
-        viewBox="0 0 16 16">
-        <path
-          d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z" />
-      </svg>
-      <a href="mailto:contact@bbsaru.com">contact@bbsaru.com</a>
-    </div>
-  </div>
-
-  <div class="attribute">
-    Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"
-      title="Flaticon">www.flaticon.com</a>
-  </div>
-</footer>
 
 </html>
