--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
     <title>Mary Joyce Recto</title>
 </head>
 
 <body>
-    <ul class="nav justify-content-center">
+    <ul class="nav justify-content-center navbar">
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -25,22 +32,23 @@
     </ul>
     <main class="d-flex flex-wrap align-items-center">
         <div class="m-5 col-sm-12 col-md-6 col-lg-4" id="homeInfo">
-            <h1>Hi, I am Mary Joyce</h1>
+            <h1>Hi, I am Mary Joyce!</h1>
             <p>
-                A <strong>creative</strong> and <strong>innovative</strong> full-stack web developer based in Taguig City.
+                A <strong>creative</strong> and <strong>innovative</strong> full-stack web developer based in Taguig
+                City.
             </p>
-            <a href="./portfolio.html" class="btn btn-outline-primary">View my Portfolio</a>
-            <a href="./contact.html" class="btn btn-outline-primary">Contact Me</a>
+            <a href="./portfolio.html" class="button btn">View my Portfolio</a>
+            <a href="./about.html" class="button btn">Read More</a>
         </div>
         <div class="iconContainer col-sm-12 col-md-4 col-lg-5 d-flex justify-content-center">
-            <img src="https://cdn-icons-png.flaticon.com/512/4697/4697217.png" 
-            class="img-fluid"
-            id="programmerIcon"
-            alt="Woman working in front of laptop">
+            <img src="https://cdn-icons-png.flaticon.com/512/4697/4697217.png" class="img-fluid" id="programmerIcon"
+                alt="Woman working in front of laptop">
         </div>
     </main>
     <footer>
-        <div class="border text-center">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        <div class="border text-center">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
+            <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+        </div>
     </footer>
 </body>
 
